# re-core

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  Dockerfile  README.md  WORKSPACE  mkdocs.yml  mkdocs_open.yml
.devcontainer/: Dockerfile  build.sh  devcontainer.json  install_perf.sh  pull.sh  run.sh  run_dotfiles.sh  run_dotfiles_local.sh  run_local.sh
.github/: pull_request_template.md
.github/workflows/: build-image.yml  lint-and-codecov.yml
.trunk/: trunk.yaml
curves/: BUILD
dev/: Dockerfile  run.sh  run_dotfiles_local.sh  run_local.sh
docs/: index.md
docs/re_core/: error_handling.md
docs/resim/: index.md
re_core/assert/: assert.cc  assert.hh  assert_test.cc
re_core/auth/: BUILD  auth_client_interface.hh  device_code_client.cc  device_code_client.hh  device_code_client_test.cc
re_core/curves/: BUILD  d_curve.cc  d_curve.hh  d_curve_test.cc  d_curve_test_helpers.cc  d_curve_test_helpers.hh  quintic_poly_coeffs.cc  quintic_poly_coeffs.hh  quintic_poly_coeffs_test.cc  t_curve.cc  t_curve.hh  t_curve_segment.cc  t_curve_segment.hh  t_curve_segment_test.cc  t_curve_test.cc  t_curve_test_helpers.cc  t_curve_test_helpers.hh  t_curve_test_helpers_test.cc  test_helpers.cc  test_helpers.hh  test_helpers_test.cc  two_jet.cc  two_jet.hh  two_jet_concepts.hh  two_jet_concepts_test.cc  two_jet_test.cc  two_jet_test_helpers.cc  two_jet_test_helpers.hh  two_jet_test_helpers_test.cc
re_core/math/: BUILD  multivariate_gaussian.cc  multivariate_gaussian.hh  multivariate_gaussian_test.cc  (+5 more)
resim/visualization/examples/package/: CMakeLists.txt  README.md
(+245 files in other folders)
